--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -1,1 +1,33 @@
-<p>user-list works!</p>
+<div class="float-right">
+  <form class="form-inline my-2 mt-my-0">
+    <input [(ngModel)]="searchText" name="searchText" class="form-control mr-sm-2" type="text" placeholder="Filter by Username">
+  </form>
+</div>
+<div>
+  <table class="table">
+    <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Username</th>
+      <th scope="col">Lastname</th>
+      <th scope="col">Firstname</th>
+      <th scope="col">Password</th>
+      <th scope="col">Active</th>
+      <th scope="col">Last login</th>
+      <th scope="col">Supervisor</th>
+    </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users | filterusername:searchText">
+        <th scope="row" width="20px"><a routerLink="/user/{{user.id}}">{{user.id}}</a></th>
+        <td>{{user.username}}</td>
+        <td>{{user.last_name}}</td>
+        <td>{{user.first_name}}</td>
+        <td>{{user.password}}</td>
+        <td>{{user.is_active}}</td>
+        <td>{{user.last_login}}</td>
+        <td>{{user.is_supervisor}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
