Implements user editing and creating

--- a/src/app/components/login/login-error/login-error.component.html
+++ b/src/app/components/login/login-error/login-error.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="control.invalid && (control.dirty || control.touched)"
-     class="alert-danger custom-login-error">
+     class="alert-danger custom-error">
 
   <div *ngIf="control.errors.required">
     {{name}} is required.
