Implements spinner in user editin/creating component

--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -35,7 +35,9 @@
 </div>
 <div class="custom-spinner" *ngIf="spinnerShowable">
   <ngx-spinner
-    size = "medium"
+    size = "large"
     type = "ball-clip-rotate"
-    [fullScreen] = "false"></ngx-spinner>
+    bdColor="#fff"
+    color="black"
+    [fullScreen] = "false"><p>Loading</p></ngx-spinner>
 </div>
