--- a/src/app/users/components/user-create/user-create.component.html
+++ b/src/app/users/components/user-create/user-create.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-3">
   <div class="col-sm-0 col-md-1 col-lg-1"></div>
   <div class="col-sm-12 col-md-11 col-lg-11">
     <div class="float-left">
@@ -8,6 +8,14 @@
       <button class="btn btn-dark" (click)="processUser();">{{action}}</button>
     </div>
   </div>
+</div>
+<div class="custom-spinner" *ngIf="spinnerShowable">
+  <ngx-spinner
+    size = "large"
+    type = "ball-clip-rotate"
+    bdColor="#fff"
+    color="black"
+    [fullScreen] = "false"><p>Loading</p></ngx-spinner>
 </div>
 <form class="create-user" *ngIf="userForm" [formGroup]="userForm">
   <div class="form-group row">
