--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,9 @@ body {
   margin-left: 0rem !important;
   margin-top: 0.9rem;
 }
+
+.custom-spinner {
+  position: relative;
+  margin-top: -15px;
+  height: 200px;
+}
