--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,7 +34,7 @@
         type="button"
         (click)="loginUser();"
         id="signin"
-        class="btn btn-lg btn-primary btn-block">
+        class="btn btn-lg btn-dark btn-block">
         SIGN IN
       </button>
     </div>
