--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -33,11 +33,5 @@
     </tbody>
   </table>
 </div>
-<div class="custom-spinner" *ngIf="spinnerShowable">
-  <ngx-spinner
-    size = "large"
-    type = "ball-clip-rotate"
-    bdColor="#fff"
-    color="black"
-    [fullScreen] = "false"><p>Loading</p></ngx-spinner>
-</div>
+<app-custom-spinner [spinnerShowable]="spinnerShowable"></app-custom-spinner>
+
