--- a/src/app/users/components/user-create/user-create.component.html
+++ b/src/app/users/components/user-create/user-create.component.html
@@ -6,6 +6,7 @@
     </div>
     <div class="float-right">
       <button class="btn btn-dark" (click)="processUser();">{{action}}</button>
+      <button class="btn btn-secondary ml-1" routerLink="/users">Go to users page</button>
     </div>
   </div>
 </div>
@@ -62,6 +63,7 @@
     <label for="active" class="col-sm-3 col-md-2 col-lg-2 col-form-label">Active</label>
     <div class="col-sm-9 col-md-8 col-lg-7">
       <input class="form-check-input" type="checkbox" id="active" formControlName="is_active">
+      <span class="description">Only checked input is enabled!</span>
       <div>
         <app-user-error [control]="is_active" [name]="'Active'"></app-user-error>
       </div>
@@ -85,6 +87,7 @@
     <div class="col-sm-9 col-md-8 col-lg-7">
       <div>
         <input class="form-check-input" type="checkbox" id="supervisor" formControlName="is_supervisor">
+        <span class="description">Only checked input is enabled!</span>
       </div>
       <div>
         <app-user-error [control]="is_supervisor" [name]="'Supervisor'"></app-user-error>
