--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -7,26 +7,24 @@
   <table class="table table-hover">
     <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
+      <th scope="col" style="width:40px">#</th>
       <th scope="col">Username</th>
       <th scope="col">Lastname</th>
       <th scope="col">Firstname</th>
-      <th scope="col">Password</th>
-      <th scope="col">Active</th>
+      <th scope="col" style="width:40px">Active</th>
       <th scope="col">Last login</th>
       <th scope="col">Supervisor</th>
     </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users | filterusername:searchText">
-        <th title="Click to edit" scope="row" width="20px">
+        <th title="Click to edit" scope="row">
           <a routerLink="/user/{{user.id}}">{{user.id}}</a>
         </th>
         <td>{{user.username}}</td>
-        <td>{{user.last_name}}</td>
-        <td>{{user.first_name}}</td>
-        <td>{{user.password}}</td>
-        <td>{{user.is_active}}</td>
+        <td><span [title]="user.last_name">{{user.last_name}}</span></td>
+        <td><span [title]="user.first_name">{{user.first_name}}</span></td>
+        <td>{{user.is_active ? 'Yes' : 'No'}}</td>
         <td>{{user.last_login}}</td>
         <td>{{user.is_supervisor}}</td>
       </tr>
