--- a/src/app/components/login/login-error/login-error.component.html
+++ b/src/app/components/login/login-error/login-error.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="control.invalid && (control.dirty || control.touched)"
+<div *ngIf="control && control.invalid && (control.dirty || control.touched)"
      class="alert-danger custom-error">
 
   <div *ngIf="control.errors.required">
