--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -7,7 +7,9 @@
   <table class="table table-hover">
     <thead class="thead-dark">
     <tr>
-      <th scope="col" style="width:40px">#</th>
+      <th scope="col" class="header-id" (click)="sortById()">ID
+        <i class="custom-icon" [ngClass]="{'custom-arrow-up': isAscending, 'custom-arrow-down': !isAscending}"></i>
+      </th>
       <th scope="col">Username</th>
       <th scope="col">Lastname</th>
       <th scope="col">Firstname</th>
@@ -28,6 +30,7 @@
         <td>{{user.last_login}}</td>
         <td>{{user.is_supervisor}}</td>
       </tr>
+      <tr *ngIf="noUser"><td class="text-center" colspan="7">{{noUser}}</td></tr>
     </tbody>
   </table>
 </div>
